[tool.poetry]
name = "atproto"
version = "0.0.0" # placeholder. Dynamic version from Git Tag
description = "The AT Protocol SDK"
authors = ["Ilya (Marshal) <ilya@marshal.dev>"]
license = "MIT"
repository = "https://github.com/MarshalX/atproto"
readme = "README.md"
keywords = ["library", "sdk", "codegen", "xrpc", "xrpc-client", "atprotocol", "atproto", "lexicon", "parser", "schema", "bluesky", "bluesky-api", "at", "uri", "atp", "nsid", "did", "cid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
]

[tool.poetry.urls]
"Documentation" = "https://atproto.blue"
"Changes" = "https://github.com/MarshalX/atproto/blob/main/CHANGES.md"
"Tracker" = "https://github.com/MarshalX/atproto/issues"
"Author" = "https://github.com/MarshalX"

[tool.poetry.scripts]
atp = "atproto.cli:atproto_cli"
atproto = "atproto.cli:atproto_cli"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.13"
httpx = ">=0.24.0,<0.26.0"
dacite = ">=1.8.0,<2"
typing-extensions = ">=4.6.1,<5"
pyjwt = ">=2.7.0,<3"
click = ">=8.1.3,<9"
websockets = ">=11.0.3,<13"
pydantic = ">=2.0,<3.0"
libipld = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.2"
mypy = ">=1.3.0,<1.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
myst-parser = "1.0.0"
sphinx-copybutton = "0.5.2"
sphinx-favicon = "1.0.1"
furo = "2023.3.27"
autodoc-pydantic = ">=2.0.1,<2.1.0"
sphinxext-opengraph = "0.7.5"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1,<7.4.0"

[tool.poetry-dynamic-versioning]
# poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
strict = true
bump = true
metadata = false
fix-shallow-repository = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.mypy]
python_version = "3.7"
disallow_untyped_defs = false # TODO(MarshalX) enable

[tool.ruff]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "C90",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "ASYNC", # flake8-async
#    "ANN", # flake8-annotations. Not all resolved yet
    "C",
    "BLE",
    "ERA",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PGH",
    "PIE",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
]
line-length = 120
target-version = "py37"
ignore = [
    "PGH004", # use specific rule code with noqa; works bad with JetBrains IDE Warnings
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
"docs/*.py" = ["T201", "INP001", "ERA001", "E501"]
"examples/*.py" = ["T201", "INP001", "ERA001"]
"atproto/xrpc_client/models/__init__.py" = ["F401", "F811"]
"atproto/xrpc_client/models/app/*.py" = ["E501"]
"atproto/xrpc_client/models/com/*.py" = ["E501"]
"atproto/xrpc_client/namespaces/async_ns.py" = ["E501"]
"atproto/xrpc_client/namespaces/sync_ns.py" = ["E501"]
"fetch_new_lexicon.py" = ["T201"]
"test.py" = ["S101", "ERA001", "T201", "E501", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
